# stepic_mobile

./: .env.example  .gitignore  README.md  config.browserstack.env.example  config.local.env.example  config.py  pyproject.toml  requirements.txt
model/data/: user_data.py
model/pages/: auth_page.py  main_page.py  product_select_page.py  profile_page.py
model/utils/: app.py  attach.py  file.py  get_video.py
notifications/: config.json
tests/: conftest.py  test_stepik.py
